@@ -3,7 +3,6 @@ autom4te.cache
 aclocal.m4
 *.in
 configure
-config.*
 Makefile
 missing
 depcomp
